@@ -9,19 +9,22 @@ dnl -- OPENAXIOM_CANONICAL_SYSTEM --
 dnl --------------------------------
 AC_DEFUN([OPENAXIOM_CANONICAL_SYSTEM],[
 AC_CANONICAL_SYSTEM
-oa_targetdir=$top_builddir/$target
-oa_target_bindir=$oa_targetdir/bin
-oa_target_libdir=$oa_targetdir/lib
-oa_target_includedir=$oa_targetdir/include
 
-AC_SUBST(oa_top_builddir,'$(top_builddir)/build')
-AC_SUBST(oa_builddir,'$(oa_top_builddir)/$(build)')
-AC_SUBST(oa_build_bindir,'$(oa_builddir)/bin')
-AC_SUBST(oa_build_libdir,'$(oa_builddir)/lib')
-AC_SUBST(oa_build_mandir,'$(oa_builddir)/man')
-AC_SUBST(oa_build_docdir,'$(oa_builddir)/doc')
-AC_SUBST(oa_build_datadir,'$(oa_builddir)/share')
-AC_SUBST(oa_build_texdir,'$(oa_build_datadir)/texmf/tex')
+AC_SUBST(oa_src_srcdir,'$(top_srcdir)/src')
+AC_SUBST(oa_src_docdir,'$(oa_src_srcdir)/doc')
+AC_SUBST(oa_src_datadir,'$(oa_src_srcdir)/share')
+AC_SUBST(oa_src_algdir,'$(oa_src_srcdir)/algebra')
+AC_SUBST(oa_src_texdir,'$(oa_src_datadir)/tex')
+
+AC_SUBST(oa_targetdir,'$(top_builddir)/$(target)')
+AC_SUBST(oa_target_bindir,'$(oa_targetdir)/bin')
+AC_SUBST(oa_target_libdir,'$(oa_targetdir)/lib')
+AC_SUBST(oa_target_srcdir,'$(oa_targetdir)/src')
+AC_SUBST(oa_target_docdir,'$(oa_targetdir)/doc')
+AC_SUBST(oa_target_datadir,'$(oa_targetdir)/share')
+AC_SUBST(oa_target_texdir,'$(oa_target_datadir)/texmf/tex')
+AC_SUBST(oa_target_includedir,'$(oa_targetdir)/include')
+
 AC_SUBST(oa_configdir,'$(top_builddir)/config')
 AC_SUBST(oa_c_macros,'$(oa_configdir)/axiom-c-macros.h')
 ])
